Double tap to zoom out doesn't work after upgrading to iOS 13 https://bugs.webkit.org/show_bug.cgi?id=205158 <rdar://problem/205158>

Reviewed by Wenson Hsieh.

Source/WebKit:

Test: fast/events/ios/fast-click-double-tap-to-zoom-in-on-text-and-then-again-to-zoom-out.html

In order to determine whether a significant zoom to happen, we should use the current page scale
factor and not the initial page scale factor.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _handleSmartMagnificationInformationForPotentialTap:renderRect:fitEntireRect:viewportMinimumScale:viewportMaximumScale:nodeIsRootLevel:]):

LayoutTests:

Add a test that double taps to zoom in and then double taps to zoom out. This test would fail to zoom
out prior to this source change. This test is skipped on iPad since desktop-class browsing mode has
heuristics that would prevent the second double-tap to zoom out.

* fast/events/ios/fast-click-double-tap-to-zoom-in-on-text-and-then-again-to-zoom-out-expected.txt: Added.
* fast/events/ios/fast-click-double-tap-to-zoom-in-on-text-and-then-again-to-zoom-out.html: Added.
* platform/ipad/TestExpectations:


Canonical link: https://commits.webkit.org/225913@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262959 268f45cc-cd09-0410-ab3c-d52691b4dbfc